# app/controllers/api/v1/certificates_controller.rb
@@ -304,7 +304,7 @@ class Api::V1::CertificatesController < Api::V1::BaseApiController
                json: resp_json
       end
 
-      ConfirmationLog.create!(remote_ip: "#{request.remote_ip}", request_json: "#{requ_json}", response_json: "#{resp_json}")
+      ConfirmationLog.create!(remote_ip: "#{request.headers['X-Real-IP']}", request_json: "#{requ_json}", response_json: "#{resp_json}")
 
     end
   end
